--- a/src/Components/Piece/style.scss
+++ b/src/Components/Piece/style.scss
@@ -4,10 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-self: center;
   cursor: grab;
 
   > img {
-    width: 50px;
-    height: 55px;
+    width: 70%;
+    height: 70%;
   }
 }
